# xdi

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: builder.rs  inventory.rs  lib.rs
src/layers/: mapping.rs  mod.rs  scope.rs  service.rs
src/layers/scope/: builder.rs  mod.rs  singleton.rs  task_local.rs  thread_local.rs
src/tests/: mod.rs  singletone.rs  task_local.rs  thread_local.rs  transient.rs
src/types/: arc_service.rs  boxed_service.rs  boxed_service_sync.rs  error.rs  mod.rs  type_info.rs
xdi-macro/: Cargo.toml  README.md
xdi-macro/src/: lib.rs
