[package]
name = "simple-di"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6"
ahash = "0"
parking_lot = "0.12"
anyhow = "1"
thiserror = "2"

tokio = { version = "1", features = ["rt", "rt-multi-thread"], default-features = false, optional = true }

[features]
default = ["task-local"]
task-local = ["dep:tokio"]